assets/src/css/podcasts/_single.scss
.single .podcast {

	header {
		background: $colors-blue;
		color: #fff;
		position: relative;
		z-index: 1;

		.row-container {
			padding: 1em 1em 0;

			@include tablet {
				padding-top: 0;
			}
			@include phone {
				padding-top: .5em;
			}
		}

		&.has_subtitle .row-container {
			padding-top: .6em;
		}

		&.has_header_img {
			.header-bg-container {
				position: absolute;
				top: 0;
				left: 0;
				width: 100%;
				height: 100%;

				overflow: hidden;

				img {
					position: absolute;
					top: 0;
					left: 50%;
					transform: translateX(-50%) translateY(-10%);
					min-width: 100%;
					min-height: 110%;
				}

				&:after {
					content: '';
					background: linear-gradient(to bottom, rgba(0,0,0,0), rgba(0,0,0,0.4));

					position: absolute;
					top: 0;
					left: 0;
					width: 100%;
					height: 100%;
				}
			}
		}

		.info {
			display: flex;
			justify-content: flex-start;
			align-content: flex-start;
			align-items: flex-end;
			flex-wrap: nowrap;

			position: relative;
			top: 1em;

			@include phone {
				text-align: center;
				display: block;
			}

			@at-root .single .podcast header.has_subtitle .info {
				top: 1.4em;
			}

			figure, .title {
				flex: 0 1 auto;
			}

			figure {
				flex-basis: 300px;
				min-width: 275px;

				border: 3px solid #fff;
				border-radius: 2px;
				box-shadow: 0 .25em 1em rgba(0,0,0,0.2);

				margin: 0 .5em 0 0;
				padding: 0;

				position: relative;
				z-index: 2;

				@include tablet {
					flex-basis: 200px;
					max-width: 200px;
					min-width: 150px;
				}
				@include phone {
					width: 75%;
					margin: 0 auto .5em;
				}

				img {
					display: block;
					width: 100%;
				}
			}

			.title {

				flex-basis: calc( 100% - 300px );

				margin-bottom: .25em;

				position: relative;
				z-index: 1;

				@at-root .single .podcast header.has_subtitle .title {
					margin-bottom: 0;
				}

				@include tablet {
					font-size: .8em;
				}


				h1 {
					font-size: 2em;

					&[data-lcl="0"] {
						font-size: 3em;
					}
					&[data-lcl="1"] {
						font-size: 2.75em;
					}
					&[data-lcl="2"] {
						font-size: 2.5em;
					}
					&[data-lcl="3"] {
						font-size: 2.25em;
					}

					@include phone {
						margin-left: -.25em;
					}
				}

				h2 {
					color: #444;
					font-size: .9em;
				}

			}

			.meta {
				display: block;
				margin-bottom: .25em;
				font-size: 0.75em;
			}

			.genres {
				display: inline-block;
				color: rgba(255,255,255,0.75);
				text-shadow: 1px 1px 0 #000;

				@include phone {
					margin-bottom: .5em;
				}

				a {
					display: inline-block;
					color: #fff;
					text-decoration: none;

					&:hover {
						color: $colors-blue;
					}
				}

			}
			.tags {
				font-size: 0.35em;
				vertical-align: middle;

				a {
					background: #fff;
					color: #111;

					padding: .35em .5em;

					opacity: 0.4;

					&:hover {
						background: $colors-purple;
						color: #fff;
						opacity: 1;
					}
				}

				@include phone {
					font-size: 0.5em;
					display: block;
					margin-bottom: 1em;

					a {
						opacity: 0.5;
					}
				}
			}

		}

	}
	// header

	.content {
		display: flex;
		justify-content: flex-start;
		align-content: flex-start;
		align-items: flex-start;
		flex-wrap: wrap;

		line-height: 1.4;

		margin-top: 1.25em;
		padding: 0 1em;

		@include tablet {
			flex-wrap: wrap;
			flex-direction: column;

			margin: 1em auto 0;
			padding: 0;
		}

		.social {

			font-size: 0.45em;
			text-align: left;

			ul,li {
				list-style: none;
				margin: 0;
				padding: 0;
			}

			li {
				display: inline-block;
				margin-right: 1em;
			}

			a {
				display: flex;
				align-items: center;

				color: inherit;
				text-decoration: none;

				&:hover {
					color: $colors-purple;
				}
			}

			svg {
				width: auto;
				height: 1em;
				margin-right: .25em;
				vertical-align: baseline;

				&.twitter {
					fill: #1DA1F2;
				}
				&.facebook {
					fill: #3B5998;
				}
			}
		}

		.description, .player_embed, .storelinks {
			flex: 1 1 50%;
			flex-basis: calc(50% - 1em);

			@include tablet {
				flex-basis: 100%;
				width: 100%;
			}
		}

		/*
		.body {
			@include phone {
				max-height: 250px;
				overflow: hidden;
				position: relative;

				&:after {
					content: '';
					background: linear-gradient(to bottom, rgba(245,245,245,0) 0%,rgba(245,245,245,1) 100%);
					width: 100%;
					height: 3em;
					position: absolute;
					bottom: 0;
					left: 0;
				}
			}
		}
		*/

		.player_embed {
			margin-left: 1em;

			@include tablet {
				margin-left: 0;
			}
			iframe {
				background: url(../images/spinner.svg) no-repeat center center;
				max-width: 100%;

				.loaded {
					background: none;
				}
			}
		}

		.storelinks {
			margin: .5em 0 0 1em;

			@include phone {
				margin: .5em 0 0;
			}

			ul, li {
				list-style: none;
				margin: 0;
				padding: 0;
			}
			ul {
				display: flex;
				flex-wrap: wrap;
				align-items: flex-start;
				justify-content: center;
			}
			li {
				flex-basis: 1%;
				padding: 0 .15em .15em;

				&:last-child {
					padding-right: 0;
				}
			}
			img {
				display: block;
				width: auto;
				height: 1.25em;
				opacity: 1;
				transition: opacity 0.1s;
			}

			a {
				display: block;
				text-decoration: none;

				&:hover img {
					opacity: 0.8;
				}

				@media (hover:none) {
					img {
						opacity: 1;
					}
				}
			}
		}

		.player_embed + .storelinks {
			flex-basis: 100%;
			margin-left: 0;
		}

	}

	.post-edit-link {
		font-size: 0.4rem;

		position: fixed;
		bottom: 5%;
		left: 0;
		z-index: 20;
	}

}

